--- a/SelectionCommittee_/src/main/resources/templates/error.html
+++ b/SelectionCommittee_/src/main/resources/templates/error.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Registration Form</title>
+    <title th:utext="#{lang.title}"></title>
     <link rel="stylesheet" type="text/css" th:href="@{/css/registration.css}"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -10,13 +10,12 @@
 </head>
 <body>
 <form th:action="@{/login}" method="get">
-    <button class="btn btn-md btn-warning btn-block" type="Submit">Go To Login Page</button>
+    <button class="btn btn-md btn-warning btn-block" type="Submit" th:utext="#{lang.go.to.login}"></button>
 </form>
 
 <div class="container">
-        <h1>Error occurred</h1>
-        <p>
-            An error has occurred. Please contact the administrator
+        <h1 th:utext="#{lang.error.occurred}"></h1>
+        <p th:utext="#{lang.error.occurred.text}">
         </p>
 </div>
 
