--- a/SelectionCommittee_/src/main/resources/templates/login.html
+++ b/SelectionCommittee_/src/main/resources/templates/login.html
@@ -3,7 +3,7 @@
       xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <title>Spring Security Tutorial</title>
+    <title th:utext="#{lang.title}"></title>
     <link rel="stylesheet" type="text/css" th:href="@{/css/login.css}"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -12,25 +12,28 @@
 
 <body>
 <form th:action="@{/registration}" method="get">
-    <button class="btn btn-md btn-warning btn-block" type="Submit">Go To Registration Page</button>
+    <button class="btn btn-md btn-warning btn-block" type="Submit" th:utext="#{lang.go.to.reg}"></button>
 </form>
-
+<a th:href="@{/login?lang=en}" style="align-content: center">Eng</a>
+&nbsp;|&nbsp;
+<a th:href="@{/login?lang=ua}" style="align-content: center">Ukr</a>
 <div class="container">
-    <img th:src="@{/images/login.jpg}" class="img-responsive center-block" width="300" height="300" alt="Logo"/>
     <form th:action="@{/login}" method="POST" class="form-signin">
-        <h3 class="form-signin-heading" th:text="Welcome"></h3>
+        <h3 class="form-signin-heading" th:utext="#{lang.welcome}"></h3>
         <br/>
 
-        <input type="text" id="user_name" name="user_name" placeholder="User Name"
+        <input type="text" id="user_name" name="user_name" th:placeholder="#{lang.user.name}"
                class="form-control"/> <br/>
-        <input type="password" th:placeholder="Password"
+        <input type="password" th:placeholder="#{lang.password}"
                id="password" name="password" class="form-control"/> <br/>
 
         <div align="center" th:if="${param.error}">
-            <p style="font-size: 20; color: #FF1C19;">User Name or Password invalid, please verify</p>
+            <p style="font-size: 20; color: #FF1C19;" th:utext="#{lang.error.login}"></p>
         </div>
-        <button class="btn btn-lg btn-primary btn-block" name="Submit" value="Login" type="Submit"
-                th:text="Login"></button>
+
+            <button th:href="@{/admin/home}" class="btn btn-lg btn-primary btn-block" name="Submit" value="Login" type="Submit"
+                    th:utext="#{lang.login}"></button>
+
     </form>
 </div>
 </body>
