--- a/SelectionCommittee_/src/main/resources/templates/login.html
+++ b/SelectionCommittee_/src/main/resources/templates/login.html
@@ -31,7 +31,7 @@
             <p style="font-size: 20; color: #FF1C19;" th:utext="#{lang.error.login}"></p>
         </div>
 
-            <button th:href="@{/admin/home}" class="btn btn-lg btn-primary btn-block" name="Submit" value="Login" type="Submit"
+            <button class="btn btn-lg btn-primary btn-block" name="Submit" value="Login" type="Submit"
                     th:utext="#{lang.login}"></button>
 
     </form>
